# moda-material

./: .env.example  .gitignore  Dockerfile  README.md  cloudflare-worker.js  docker-compose.yml  pyproject.toml  pythonanywhere-ai-env.txt  render.yaml  requirements.txt  start-bot.ps1  stop-bot.ps1
app/: __init__.py  main.py
app/bot/: handlers.py
app/core/: config.py  keyboards.py
app/db/: models.py  session.py
app/services/: ai.py  downloader.py  generator.py  image_similarity.py  material_search.py  repository.py  schemas.py  stats.py
app/sources/: ambientcg.py  base.py  cgbookcase.py  polyhaven.py  texturecan.py  threedtextures.py
tests/: test_consultant.py  test_search_ranking.py
