[project]
name = "ai-material-assistant"
version = "1.0.0"
description = "Production-ready Telegram bot for architectural material search, recommendation, favorites, and AI material generation."
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[job-queue]==21.10",
    "SQLAlchemy[asyncio]==2.0.36",
    "aiosqlite==0.20.0",
    "httpx==0.28.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "beautifulsoup4==4.12.3",
    "rapidfuzz==3.11.0",
    "python-dotenv==1.0.1",
    "openai==1.59.7",
    "Pillow==11.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
    "ruff==0.9.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
